# life

./: .gitignore  .pre-commit-config.yaml  =0.21.0  =3.0.0  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Index_code.py  Index_docs.py  README.md  __main__  analyze_test_results.py  analyze_test_results_custom.py  api.py  check_feedback_1769058985.txt  conftest.py  current_plan_task_1768964984.md  debug_archive.py  debug_memory.py  debug_signature.py  debug_temp_archive.py  environment.silence_detector  error_report_1769073267.txt  experimental.memory_hierarchy.hierarchy_manager  experimental.memory_hierarchy.procedural_store  experimental.memory_hierarchy.semantic_store  experimental.memory_hierarchy.sensory_buffer  export_1769051197.json  export_1769051219.csv  export_1769051219.json  export_1769052386.csv  export_1769052386.json  export_1769052407.csv  export_1769052407.json  export_1769052488.csv  export_1769052488.json  export_1769052620.csv  export_1769052620.json  export_1769052700.json  export_1769052707.json  (+69 more)
.cursor/: MCP_SETUP.md  llm-config.json  mcp_config_example.json
.cursor/plans/: adaptation_fixes_after_skeptic_20260119.plan.md  codeagent_process_upgrade_1e0f8caf.plan.md  fixes_after_skeptic_task_1768840375_20260119.plan.md  fixes_after_skeptic_task_1768843354_20260119.plan.md  fixes_after_skeptic_task_1768848221_20260119.plan.md  fixes_after_skeptic_task_1768889716_20260120.plan.md  forAlexAnswer.md  learning_fixes_after_skeptic_20260119.plan.md  life_философия_времени_5e08cad6.plan.md  mcp_engine_redesign_ab76d85d.plan.md  глубокое_развитие_life_—_сделать_жизнь_живой_553fd9df.plan.md
.cursor/rules/: cursorliferules.mdc
.github/workflows/: ci.yml  extended-tests.yml
apps/: api.py
config/: agents.yaml  config.yaml  llm_settings.yaml  llm_settings.yaml.backup  logging.yaml  observability.yaml  test_config.yaml
cursor_commands/: instruction_full_cycle_1768821893_NEW_CHAT.txt  instruction_full_cycle_1769071327_NEW_CHAT.txt  instruction_server_test_1769071327_NEW_CHAT.txt  instruction_test_complex_1768894273_NEW_CHAT.txt  instruction_test_complex_1768899358_NEW_CHAT.txt  instruction_test_complex_1769072033_NEW_CHAT.txt  instruction_test_complex_1769072142_NEW_CHAT.txt  instruction_test_complex_1769072174_NEW_CHAT.txt  instruction_test_simple_1769071427_NEW_CHAT.txt  instruction_test_simple_1769071536_NEW_CHAT.txt  instruction_test_simple_1769071569_NEW_CHAT.txt  instruction_test_simple_1769071733_NEW_CHAT.txt
cursor_results/: result_full_cycle_1768821893.txt  result_full_cycle_1769071327.txt  result_server_test_1768821894.txt  result_server_test_1769071327.txt
docs/: 00_VISION.md  01.1 runtime-скелет.md  01_ARCHITECTURE.md  02.1 интерпретации.md  02_RUNTIME_LOOP.md  03_SELF_STATE.md  04.0 Pre_MONITOR.md  04_MONITOR.md  05_MINIMAL_IMPLEMENTATION.md  06_API_SERVER.md  07_ENVIRONMENT.md  07_ENVIRONMENT_ARCHITECTURE.md  08_EVENTS_AND_MEANING.md  09_MEMORY_AND_EXPERIENCE.md  10_Activation_and_Recall.md  11.2_DECISION_MINIMAL_FORM.md  12_ACTION_AND_EXECUTION.md  12_ACTION_LIMITS.md  13_FEEDBACK_LIMITS.md  14.1_Learning_Minimal_Form  14_LEARNING_LIMITS.md  15.1_ADAPTATION_MINIMAL_FORM.md  15_ADAPTATION_LIMITS.md  16_GOALS_LIMITS.md  17.1_PLANNING_MINIMAL_FORM.md  17_PLANNING_LIMITS.md  18.1_INTELLIGENCE_MINIMAL_FORM.md  18_INTELLIGENCE_LIMITS.md  DOCUMENTATION_STRUCTURE_CHECK.md  FAQ.md  FINAL_STRUCTURE_SUMMARY.md  INDEX.md  LLM_instruction.md  MANIFEST.md  README.md  SETUP_INSTRUCTIONS.md  STRUCTURE_COMPLIANCE_REPORT.md  _project_plan.md  _project_tree.md  auto-reload-plan.md  (+6 more)
docs/adr/: 001-experimental-components-feature-flags.md  001-life-philosophy.md  002-layered-architecture.md  002-selfstate-refactor.md  003-architecture-contracts-integration.md  003-event-generator-decomposition.md  003-technology-stack.md  004-memory-architecture.md  005-runtime-loop-managers.md  006-architectural-contracts.md  006-subjective-time.md  007-state-snapshot-for-api.md  008-mcp-index-architecture.md  009-lifecycle-manager.md  010-subjective-time.md  011-selfstate-improvements.md  012-memory-v2.md  013-learning-layer.md  014-adaptation-layer.md  015-runtime-loop-refactoring.md  016-selfstate-composition-refactoring.md  017-eventgenerator-component-separation.md  018-architectural-contracts-system.md  019-serialization-contracts.md  020-experimental-components-serialization-integration.md  ADR_CHECKLIST.md  README.md
docs/architecture/: minimal-implementation.md  overview.md  sequence-diagrams.md
docs/archive/: README.md  (+13 more)
plans/: master_docs_index.md
scripts/: analyze_large_logs.py  analyze_logs.py  analyze_test_suite.py  assess_experimental_risks.py  assess_experimental_risks_simple.py  benchmark_before_after.py  benchmark_event_processing.py  benchmark_memory_performance.py  benchmark_observability_overhead.py  benchmark_observability_performance.py  benchmark_runtime_optimizations.py  benchmark_serialization_optimization.py  check_file_organization.py  clean_root_artifacts.py  generate_developer_reports.py  generate_test_report.py  measure_runtime_overhead.py  monitor_logs.py  optimize_test_suite.py  performance_monitoring.py  profile_event_processing.py  profile_learning_adaptation.py  profile_memory_operations.py  run_analysis_api.py  run_observation_api.py  run_performance_tests.py  simple_async_writer_test.py  simple_overhead_test.py  stop.py  stress_test_runtime.py  validate_computation_cache_grouping.py  validate_event_probabilities.py
src/: __init__.py  checkpoint_manager.py  comparison_cli.py  config_loader.py  config_validator.py  constants.py  cursor_cli_interface.py  cursor_file_interface.py  git_utils.py  hybrid_cursor_interface.py  logging_config.py  main.py  main_server_api.py  prompt_formatter.py  security_utils.py  server.py  session_tracker.py  status_manager.py  task_logger.py  technical_monitor.py  test_main.py  todo_manager.py
todo/: CRISIS_RECOVERY_PLAN_20260121.md  CURRENT.md  DEBT.md  GENERATED_20260120_20260120_094041.md  GENERATED_20260121_20260120_212346.md  ROADMAP.md  ROADMAP_2026.md  mcp_config_example.json  todo_07-18.md  todo_own.md
(+1015 files in other folders)
