[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life"
version = "2.2.0"
description = "Life - experimental self-aware system with continuous existence"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "colorama",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-order>=1.0.0",
    "hypothesis>=6.0.0",
    "mcp>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pylint>=3.0.0",
    "isort>=5.13.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
)/
'''

[tool.pylint.messages_control]
disable = [
    "C0103",  # Variable name doesn't conform to snake_case (allow custom naming)
    "C0114",  # Missing module docstring (too strict for all modules)
    "C0115",  # Missing class docstring (too strict for all classes)
    "C0116",  # Missing function or method docstring (too strict for all functions)
    "R0903",  # Too few public methods (allow simple classes)
    "R0913",  # Too many arguments (allow complex functions)
    "R0914",  # Too many local variables (allow complex functions)
    "W0613",  # Unused argument (allow for interface compatibility)
    "R0915",  # Too many statements (allow complex functions)
    "R0912",  # Too many branches (allow complex logic)
    "R0911",  # Too many return statements (allow multiple returns)
    "C0200",  # Consider using enumerate (allow for loops)
    "C0201",  # Consider iterating with .items() (allow for loops)
    "W1514",  # Using open without explicitly specifying an encoding (handled by mypy)
    "R0801",  # Similar lines in files (allow similar code)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-locals = 20
max-returns = 8
max-branches = 15
max-statements = 60
max-parents = 8

[tool.pylint.similarities]
ignore-imports = true
ignore-signatures = true

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX", "TODO"]

[tool.pylint.per-file-ignores]
"src/test/*" = ["C", "R", "W0613", "W0621"]  # Relax rules for test files
"conftest.py" = ["C", "R"]  # Relax rules for conftest
"src/main.py" = ["C0114", "C0116"]  # Allow missing docs for main script

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
strict = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Типизация обязательна для production кода
ignore_missing_imports = true
follow_imports = "silent"

# Исключения только для тестов и специальных файлов
exclude = [
    "src/test/.*",  # Тесты проверяем отдельно
    "conftest.py",
    "debug_.*",
    "manual_test_.*",
]

# Overrides для постепенного ужесточения типизации
[[tool.mypy.overrides]]
# Основные модули - строгие правила
module = [
    "src.main_server_api",
    "src.state.self_state",
    "src.runtime.*",
    "src.memory.*",
    "src.environment.*",
    "src.meaning.*",
    "src.activation.*",
    "src.decision.*",
    "src.action.*",
    "src.intelligence.*",
    "src.planning.*",
    "src.learning.*",
    "src.adaptation.*",
    "src.feedback.*",
    "src.monitor.*",
    "src.observability.*",
]
ignore_errors = false  # Строгая проверка

[[tool.mypy.overrides]]
# Экспериментальные модули - менее строгие правила
module = [
    "src.experimental.*",
    "src.dev.*",
]
ignore_errors = false
disallow_untyped_defs = false  # Позволить нетипизированные функции в экспериментальном коде

[[tool.mypy.overrides]]
# Тесты - минимальные требования
module = [
    "src.test.*",
]
ignore_errors = true  # Полностью игнорировать ошибки типизации в тестах

[tool.pytest.ini_options]
testpaths = ["src/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-append",
    "--cov-branch",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "static: Static analysis tests (structure, types, forbidden methods)",
    "smoke: Smoke tests (basic functionality checks)",
    "slow: Slow running tests",
    "real_server: Tests that can use real server with --real-server option",
    "order: Test execution order (used by pytest-order plugin)",
    "performance: Performance benchmark tests",
    "concurrency: Concurrency tests",
    "runtime_managers: Runtime managers tests",
    "e2e: End-to-end tests",
    "dev_mode: Development mode tests",
    "profiling: Profiling system tests",
    "race_conditions: Race condition tests",
    "long_running: Long running tests (300+ ticks)",
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/test/*",
    "*/tests/*",
    "*/conftest.py",
    "*/__main__.py",
    "src/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
]